@@ -196,6 +196,7 @@ This view pages through an entire thread.  The keys are:
     r               reply to sender
     e               reply to everyone
     L               reply to list
+    W               forward message
     B               resend message to another address ("bounce")
     E               use current message as a template for a new message
     R               recall postponed message
